--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -5820,66 +5820,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ADYtmu-mqRqf",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Results (SPydeR)\n",
-        "Epoch 1/25\n",
-        "192/192 [==============================] - 684s 4s/step - loss: 0.1151 - accuracy: 0.9571 - val_loss: 0.1977 - val_accuracy: 0.9412\n",
-        "Epoch 2/25\n",
-        "192/192 [==============================] - 693s 4s/step - loss: 0.0975 - accuracy: 0.9648 - val_loss: 0.2917 - val_accuracy: 0.9055\n",
-        "Epoch 3/25\n",
-        "192/192 [==============================] - 1139s 6s/step - loss: 0.0932 - accuracy: 0.9686 - val_loss: 0.3761 - val_accuracy: 0.9156\n",
-        "Epoch 4/25\n",
-        "192/192 [==============================] - 704s 4s/step - loss: 0.0775 - accuracy: 0.9720 - val_loss: 0.6366 - val_accuracy: 0.8969\n",
-        "Epoch 5/25\n",
-        "192/192 [==============================] - 658s 3s/step - loss: 0.0730 - accuracy: 0.9733 - val_loss: 0.2495 - val_accuracy: 0.8847\n",
-        "Epoch 6/25\n",
-        "192/192 [==============================] - 747s 4s/step - loss: 0.0747 - accuracy: 0.9734 - val_loss: 0.0198 - val_accuracy: 0.9400\n",
-        "Epoch 7/25\n",
-        "192/192 [==============================] - 876s 5s/step - loss: 0.0750 - accuracy: 0.9728 - val_loss: 0.0907 - val_accuracy: 0.9434\n",
-        "Epoch 8/25\n",
-        "192/192 [==============================] - 847s 4s/step - loss: 0.0652 - accuracy: 0.9785 - val_loss: 0.2478 - val_accuracy: 0.9424\n",
-        "Epoch 9/25\n",
-        "192/192 [==============================] - 796s 4s/step - loss: 0.0587 - accuracy: 0.9788 - val_loss: 0.3438 - val_accuracy: 0.9065\n",
-        "Epoch 10/25\n",
-        "192/192 [==============================] - 809s 4s/step - loss: 0.0742 - accuracy: 0.9734 - val_loss: 0.7285 - val_accuracy: 0.9131\n",
-        "Epoch 11/25\n",
-        "192/192 [==============================] - 727s 4s/step - loss: 0.0543 - accuracy: 0.9809 - val_loss: 0.1612 - val_accuracy: 0.9275\n",
-        "Epoch 12/25\n",
-        "192/192 [==============================] - 717s 4s/step - loss: 0.0626 - accuracy: 0.9782 - val_loss: 0.7224 - val_accuracy: 0.9353\n",
-        "Epoch 13/25\n",
-        "192/192 [==============================] - 709s 4s/step - loss: 0.0511 - accuracy: 0.9806 - val_loss: 0.2011 - val_accuracy: 0.9411\n",
-        "Epoch 14/25\n",
-        "192/192 [==============================] - 841s 4s/step - loss: 0.0570 - accuracy: 0.9803 - val_loss: 0.1566 - val_accuracy: 0.9334\n",
-        "Epoch 15/25\n",
-        "192/192 [==============================] - 901s 5s/step - loss: 0.0402 - accuracy: 0.9860 - val_loss: 0.4998 - val_accuracy: 0.9247\n",
-        "Epoch 16/25\n",
-        "192/192 [==============================] - 852s 4s/step - loss: 0.0437 - accuracy: 0.9842 - val_loss: 0.2303 - val_accuracy: 0.9107\n",
-        "Epoch 17/25\n",
-        "192/192 [==============================] - 897s 5s/step - loss: 0.0315 - accuracy: 0.9914 - val_loss: 0.2446 - val_accuracy: 0.9198\n",
-        "Epoch 18/25\n",
-        "192/192 [==============================] - 970s 5s/step - loss: 0.0522 - accuracy: 0.9800 - val_loss: 0.4134 - val_accuracy: 0.9234\n",
-        "Epoch 19/25\n",
-        "192/192 [==============================] - 935s 5s/step - loss: 0.0348 - accuracy: 0.9879 - val_loss: 0.1056 - val_accuracy: 0.9287\n",
-        "Epoch 20/25\n",
-        "192/192 [==============================] - 921s 5s/step - loss: 0.0484 - accuracy: 0.9827 - val_loss: 0.0560 - val_accuracy: 0.9258\n",
-        "Epoch 21/25\n",
-        "192/192 [==============================] - 811s 4s/step - loss: 0.0390 - accuracy: 0.9875 - val_loss: 0.1002 - val_accuracy: 0.9058\n",
-        "Epoch 22/25\n",
-        "192/192 [==============================] - 805s 4s/step - loss: 0.0498 - accuracy: 0.9811 - val_loss: 0.2808 - val_accuracy: 0.9269\n",
-        "Epoch 23/25\n",
-        "192/192 [==============================] - 779s 4s/step - loss: 0.0255 - accuracy: 0.9917 - val_loss: 0.2410 - val_accuracy: 0.9444\n",
-        "Epoch 24/25\n",
-        "192/192 [==============================] - 767s 4s/step - loss: 0.0300 - accuracy: 0.9896 - val_loss: 0.3149 - val_accuracy: 0.9296\n",
-        "Epoch 25/25\n",
-        "192/192 [==============================] - 776s 4s/step - loss: 0.0330 - accuracy: 0.9863 - val_loss: 0.0541 - val_accuracy: 0.9405"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "rWu5jDVyGi73",
@@ -5978,11 +5918,7 @@
       "metadata": {
         "id": "O5SAM9KRlrlk",
         "colab_type": "code",
-        "outputId": "2a9abda1-4ec2-483b-88db-7bdda6656f64",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 511
-        }
+        "colab": {}
       },
       "source": [
         "import numpy as np\n",
@@ -6001,30 +5937,7 @@
         "print(prediction)\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-8afa5d211bcd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtest_image\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive/My Drive/dataset/dataset/pets_2.jpg'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtest_image\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimg_to_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_image\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtest_image\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand_dims\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_image\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras_preprocessing/image/utils.py\u001b[0m in \u001b[0;36mload_img\u001b[0;34m(path, grayscale, color_mode, target_size, interpolation)\u001b[0m\n\u001b[1;32m    108\u001b[0m         raise ImportError('Could not import PIL.Image. '\n\u001b[1;32m    109\u001b[0m                           'The use of `load_img` requires PIL.')\n\u001b[0;32m--> 110\u001b[0;31m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpil_image\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcolor_mode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'grayscale'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'L'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode)\u001b[0m\n\u001b[1;32m   2807\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2808\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2809\u001b[0;31m         \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2810\u001b[0m         \u001b[0mexclusive_fp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2811\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/My Drive/dataset/dataset/pets_2.jpg'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: Current TensorFlow version is 2.2.0-rc1. To use TF 1.x instead,\nrestart your runtime (Ctrl+M .) and run \"%tensorflow_version 1.x\" before\nyou run \"import tensorflow\".\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
